KB-11432:: stateOrMinistry update in user profile details